# snake_gl

./: .gitmodules  CMakeLists.txt
src/: entity.h  entity_manager.cpp  entity_manager.h  main.cpp  snake_entity.cpp  snake_entity.h
src/shaders/: shader.frag  shader.vert
